# substrate-enterprise-sample

chain/: Cargo.toml  README.md
chain/node/: Cargo.toml
chain/pallets/product-registry/: Cargo.toml  README.md
chain/pallets/product-tracking/: Cargo.toml  README.md
chain/pallets/registrar/: Cargo.toml
chain/pallets/registrar/src/: lib.rs
chain/runtime/: Cargo.toml
ui/: README.md
