[package]
name = 'pallet-product-tracking'
version = '2.0.1'
description = 'Substrate Enterprise Sample - Product Tracking Pallet'
edition = '2018'
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
homepage = 'https://substrate.dev'
repository = 'https://github.com/paritytech/substrate/'
license = 'Unlicense'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies.fixed]
default-features = false
git = "https://github.com/nukemandan/substrate-fixed"
package = "substrate-fixed"
branch = "update-2.0.1"

[dependencies.product-registry]
default-features = false
package = 'pallet-product-registry'
path = '../product-registry'
version = '2.0.1'

[dependencies.timestamp]
default_features = false
package = 'pallet-timestamp'
version = '2.0.1'

[dependencies]
frame-support = { default-features = false, version = '2.0.1' }
frame-system = { default-features = false, version = '2.0.1' }
sp-core = { default-features = false, version = '2.0.1' }
sp-io = { default-features = false, version = '2.0.1' }
sp-runtime = { default-features = false, version = '2.0.1' }

[dev-dependencies]
hex =  { default-features = false, version = '0.4.2' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'timestamp/std',
    'product-registry/std'
]
