[package]
description = 'Registrar Pallet'
edition = '2018'
license = 'Apache-2.0'
name = 'pallet-registrar'
version = '2.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies.did]
default-features = false
git = 'https://github.com/substrate-developer-hub/pallet-did'
branch = 'update-2.0.1'
package = 'pallet-did'
version = '2.0.1'

[dependencies]
serde = { features = ['derive'], optional = true, version = '1.0.114' }

frame-support = { default-features = false, version = '2.0.1' }
frame-system = { default-features = false, version = '2.0.1' }
sp-runtime = { default-features = false, version = '2.0.1' }
sp-std = { default-features = false, version = '2.0.1'}

[dev-dependencies]
sp-core = { default-features = false, version = '2.0.1' }
sp-io = { default-features = false, version = '2.0.1' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'serde/std',
    'sp-runtime/std',
    'sp-std/std',
    'did/std',
]
